--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,9 @@ android {
         }
     }
 }
-
+repositories {
+    maven { url "https://jitpack.io" }
+}
 dependencies {
     compile 'com.github.sundeepk:compact-calendar-view:2.0.3-beta'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -27,4 +29,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.android.support:design:26.1.0'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.2.4'
 }
